영상 비교분석 부분 수정

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                  <div class="mb-12">
                     <h4 class="text-2xl font-semibold text-center text-indigo-800 mb-6">영상 추천 성능 비교 (GPT vs Gemini)</h4>
                    <p class="text-center text-gray-700 max-w-2xl mx-auto mb-8">
-                        GPT는 최신 영상 데이터 부재로 존재하지 않는 영상을 추천(환각 현상)했으나, <strong>Gemini는 최신 YouTube DB와 연동되어 정확한 실존 영상</strong>을 추천했습니다.
+                        GPT는 업데이트 날짜, 사용자가 준 자료의 주제와는 맞는 영상을 주었지만 <strong>Gemini는 최신 YouTube DB와 연동되어 자료의 핵심단어를 추출하고 그에 맞는 최신 영상</strong>을 추천했습니다.
                    </p>
                    <div class="grid md:grid-cols-2 gap-8">
                        <div class="border rounded-lg p-4 bg-gray-50">
